plugins/javaFX/testData/highlighting/coercedTypes.fxml
<?xml version="1.0" encoding="UTF-8"?>
<?import javafx.scene.layout.*?>
<?import java.util.*?>
<?import java.net.*?>
<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" xmlns:fx="http://javafx.com/fxml">
  <children>
    <<error descr="Unable to coerce java.util.ArrayList to javafx.scene.Node">ArrayList</error>/>
  </children>
  <stylesheets>
    <URL value="test.css" />
  </stylesheets>
</AnchorPane>
